@@ -1,4 +1,7 @@
 2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
+  * Renamed login_required to authentication_required
+
+2008-06-05 - Sean Huber (shuber@einsteinindustries.com)
   * Renamed @searched_for_current_user to @queried_for_current_user
 
 2008-06-05 - Sean Huber (shuber@huberry.com)
